# -Cross-Asset-Stress-Scenario-Simulator

./: .env.example  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  init_database.py  nginx.conf  pyproject.toml  requirements.txt  run_api_server.py  run_scenario_examples.py  run_simulation_examples.py
.github/workflows/: ci-cd.yml
backend/: __init__.py
backend/api/: main.py
backend/config/: settings.py
backend/data_ingestion/: __init__.py  ingestion_service.py  transformers.py  validators.py
backend/database/: __init__.py  connection.py  models.py
backend/scenarios/: ai_engine.py  predefined_scenarios.py  scenario_models.py  scenario_service.py
backend/simulation/: backtester.py  correlation_matrix.py  correlation_stress.py  dashboard.py  drawdown_analyzer.py  engine.py  factor_exposure.py  hedging_service.py  historical_simulation.py  liquidity_var.py  monte_carlo.py  optimizer.py  portfolio_attribution.py  position_sizer.py  rebalancing_sim.py  regime_detector.py  report_generator.py  risk_decomposition.py  risk_metrics.py  scenario_builder.py  scenario_comparator.py  stress_grid.py  tail_dependency.py  utils.py  vol_term_structure.py
backend/tests/: conftest.py  test_ai_engine.py  test_backtester.py  test_correlation.py  test_correlation_stress.py  test_dashboard.py  test_drawdown_analyzer.py  test_factor_exposure.py  test_hedging.py  test_liquidity_var.py  test_monte_carlo.py  test_optimizer.py  test_portfolio_attribution.py  (+15 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
(+7 files in other folders)
