[project]
name = "cross-asset-stress-simulator"
version = "1.0.0"
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = ["__pycache__", "venv", ".git"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-v --tb=short"
